# chantgpt

./: .gitignore  pyproject.toml
src/frontend/: tailwind.config.ts
src/frontend/src/: App.tsx  index.css
src/frontend/src/components/: LotusIcon.tsx  ProgressIndicator.tsx  ThemeToggle.tsx
src/frontend/src/components/ui/: button.tsx
src/frontend/src/context/: ChantContext.tsx
src/frontend/src/pages/: Donate.tsx  Index.tsx  Landing.tsx  Loading.tsx  PersonalInfo.tsx  Result.tsx  Wishes.tsx
src/llm-api/: Dockerfile  docker-shell.sh  pyproject.toml
src/llm-api/src/: __init__.py  prompts.py  retrievers.py  service.py
src/pali/: Dockerfile  convert_script.py  docker-shell.sh  prepare_dict.py  pyproject.toml
src/pali/js/: pali_converter.js
src/pali/src/: __init__.py  api.py  lookup.py  semantic.py
